--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "sgnd",
-    "password": "sgnd",
+    "username": "root",
+    "password": "root",
     "database": "housy",
-    "host": "127.0.0.1",
+    "host": "10.183.133.45",
     "dialect": "mysql"
   },
   "test": {
@@ -14,7 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "use_env_variable": "10.183.133.45",
     "dialect": "postgres",
     "protocol": "postgres"
   }
